--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!--output: index.html--><!DOCTYPE html>
 <html>
   <head>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/headjs/1.0.3/head.load.min.js"></script>
@@ -106,7 +106,7 @@
             </div>
             <div class="col-sm-4">
               <h3>How can I apply?</h3>
-              <p>Just fill out <a target="_blank" href="https://smhacks.typeform.com/to/XokTDO">this form</a>! Applications close Wednesday, August 31 but will be processed on a rolling basis. Make sure to <a href="#update">subscribe</a>, follow us on <a target="blank" href="https://twitter.com/sanmateohacks">Twitter</a>, and like us on <a target="blank" href="https://facebook.com/sanmateohacks">Facebook</a> for the latest updates!</p>
+              <p>Just fill out <a target="_blank" href="https://smhacks.typeform.com/to/XokTDO">this form</a>! Applications close Friday, September 9 but will be processed on a rolling basis. Make sure to <a href="#update">subscribe</a>, follow us on <a target="blank" href="https://twitter.com/sanmateohacks">Twitter</a>, and like us on <a target="blank" href="https://facebook.com/sanmateohacks">Facebook</a> for the latest updates!</p>
             </div>
           </div>
           <div data-when="enter" data-from='0.5' data-to='0' data-opacity='0' data-translatey='1000' class="row scrollme animateme">
@@ -138,7 +138,7 @@
                 <li><b>Noon</b> - Hacking Starts</li>
                 <li><b>Noon</b> - Team Mixer</li>
                 <li><b>Noon</b> - Lunch</li>
-                <li><b>2pm</b> - Basic Web Development Workshop</li>
+                <li><b>2pm</b> - Intro to Git Workshop</li>
                 <li><b>4pm</b> - Intro to UX Design Workshop</li>
                 <li><b>6:30pm</b> - Dinner</li>
               </ul>
@@ -172,7 +172,7 @@
           </div>
           <div data-when="enter" data-from='0.5' data-to='0' data-opacity='0' data-translatey='1000' class="row text-center text-center scrollme animateme">
             <div class="col-sm-3 hidden-xs"></div>
-            <div class="col-sm-6"><a href="http://smule.com/" target="_blank"><img src="smule.png" id="smule"></a></div>
+            <div class="col-sm-6"><a href="http://smule.com/" target="_blank"><img src="smule.png" id="smule"></a><br></div>
           </div>
           <div data-when="enter" data-from='0.5' data-to='0' data-opacity='0' data-translatey='1000' class="row text-center text-center scrollme animateme">
             <div class="col-sm-4"><a href="http://justinmind.com" target="_blank"><img src="justinmind.png" id="justinmind"></a></div>
@@ -249,20 +249,15 @@
               </div>
             </div>
             <div class="col-sm-3">
-              <div class="member"><img src="nikhil.jpg" class="img-responsive img-circle">
-                <div class="name">Nikhil Dodd</div>
-                <div class="role">Outreach</div>
-              </div>
-            </div>
-          </div>
-          <div data-when="enter" data-from='0.5' data-to='0' data-opacity='0' data-translatey='1000' class="row text-center scrollme animateme">
-            <div class="col-sm-3">
               <div class="member"><img src="maggie.jpg" class="img-responsive img-circle">
                 <div class="name">Maggie Dong</div>
                 <div class="role">Outreach</div>
                 <div class="social"><a href="https://facebook.com/maggie.dong.79" target="_blank"><i class="fa fa-facebook-official"></i></a></div>
               </div>
             </div>
+          </div>
+          <div data-when="enter" data-from='0.5' data-to='0' data-opacity='0' data-translatey='1000' class="row text-center scrollme animateme">
+            <div style="width:12.499999995%" class="col-sm-3 col-xs-hidden"></div>
             <div class="col-sm-3">
               <div class="member"><img src="thomas.jpg" class="img-responsive img-circle">
                 <div class="name">Thomas Weathers</div>
