--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!--output: index.html--><!DOCTYPE html>
+<!DOCTYPE html>
 <html>
   <head>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/headjs/1.0.3/head.load.min.js"></script>
@@ -171,8 +171,8 @@
             <div class="col-sm-6"><a href="http://sie.com/en/index.html" target="_blank"><img src="sony.png" id="sony"></a></div>
           </div>
           <div data-when="enter" data-from='0.5' data-to='0' data-opacity='0' data-translatey='1000' class="row text-center text-center scrollme animateme">
-            <div class="col-sm-3 hidden-xs"></div>
-            <div class="col-sm-6"><a href="http://smule.com/" target="_blank"><img src="smule.png" id="smule"></a><br></div>
+            <div class="col-sm-6"><a href="http://smule.com/" target="_blank"><img src="smule.png" id="smule"></a></div>
+            <div class="col-sm-6"><a href="https://ibm.com/" target="_blank"><img src="ibm.png" id="ibm"></a><br><small style="font-size:8px">IBM and the IBM logo are trademarks of International Business Machines Corp., registered in many jurisdictions worldwide.</small></div>
           </div>
           <div data-when="enter" data-from='0.5' data-to='0' data-opacity='0' data-translatey='1000' class="row text-center text-center scrollme animateme">
             <div class="col-sm-4"><a href="http://justinmind.com" target="_blank"><img src="justinmind.png" id="justinmind"></a></div>
