--- a/index.html
+++ b/index.html
@@ -190,9 +190,9 @@
           <h2 class="text-center">Partners</h2>
           <div class="row text-center">
             <div class="col-md-3 col-sm-6"><a href="https://hackclub.com" target="_blank"><img data-when="enter" data-from='1' data-to='0' data-translatex='-500' data-opacity='0' src="hackclub.png" id="hackclub"></a></div>
-            <div class="col-md-3 col-sm-6"><a href="https://mlh.io" target="_blank"><img data-when="enter" data-from='1' data-to='0' data-translatey='500' data-opacity='0' src="mlh.png" id="mlh"></a></div>
-            <div class="col-md-3 col-sm-6"><a href="https://hackerearth.com/" target="_blank"><img data-when="enter" data-from='1' data-to='0' data-translatex='-500' data-opacity='0' src="hackerearth.png" id="hackerearth"></a></div>
             <div class="col-md-3 col-sm-6"><a href="http://streameducation.org" target="_blank"><img data-when="enter" data-from='1' data-to='0' data-translatey='500' data-opacity='0' src="stream.png" id="stream"></a></div>
+            <div class="col-md-3 col-sm-6"><a href="https://hackerearth.com/" target="_blank"><img data-when="enter" data-from='1' data-to='0' data-translatex='-500' data-opacity='0' src="hackerearth.png" id="hackerearth"></a></div>
+            <div class="col-md-3 col-sm-6"><a href="http://www.hacker.fund/" target="_blank"><img data-when="enter" data-from='1' data-to='0' data-translatey='500' data-opacity='0' src="hackerfund.png" id="hackerfund"></a></div>
           </div><br>
           <hr>
         </div>
