--- a/index.html
+++ b/index.html
@@ -41,8 +41,10 @@
           <div class="col-sm-12">
             <h1 id="home">SM Hacks</h1>
             <div class="slide scrollme">
-              <h3>San Mateo's first <b>high school</b> hackathon.</h3>
-              <p class="lead">September 17-18, 2016 @ <a target='_blank' href='https://goo.gl/maps/H94iydpfHEn'>Opera Mediaworks</a></p><a data-when="exit" data-from='0' data-to='0.5' data-opacity='0' data-translatex='500' data-toggle="modal" data-target="#m" class="btn btn-default btn-lg scrollme animateme">Sign up now!</a><br><br><br><i data-when="exit" data-from='0' data-to='0.5' data-translatey='500' data-rotatez='360' data-opacity='0' class="fa fa-angle-down fa-5x scrollme animateme"></i>
+              <h3>San Mateo's first <b>high school</b> hackathon.</h3><br>
+              <p class="lead">SM Hacks has been postponed until further notice.</p><br>
+              <p>To stay updated, please <a target="_blank" href="#update">subscribe</a>!</p>
+              <!-- a.btn.btn-default.btn-lg.scrollme.animateme(data-when='exit' data-from=0 data-to=.5 data-opacity=0 data-translatex=500 data-toggle='modal' data-target='#m') Sign up now!--><br><br><br><i data-when="exit" data-from='0' data-to='0.5' data-translatey='500' data-rotatez='360' data-opacity='0' class="fa fa-angle-down fa-5x scrollme animateme"></i>
             </div>
           </div>
         </div>
@@ -55,7 +57,7 @@
       <div id="collapse" class="collapse navbar-collapse">
         <ul class="nav navbar-nav navbar-right">
           <li><a href="#faq">FAQ</a></li>
-          <li><a href="#schedule">Schedule</a></li>
+          <!--li: a(href='#schedule') Schedule-->
           <li><a href="#sponsors">Sponsors</a></li>
           <li><a href="#partners">Partners</a></li>
           <li><a href="#team">Team</a></li>
@@ -70,7 +72,7 @@
           <div data-when="enter" data-from='0.5' data-to='0' data-opacity='0' data-translatey='1000' class="row scrollme animateme">
             <div class="col-sm-4">
               <h3>What is SM Hacks?</h3>
-              <p>SM Hacks is a 200-person hackathon that will gather the innovators of tomorrow into an amazing experience. SM Hacks 2016 will be hosted at <a target="_blank" href="https://goo.gl/maps/H94iydpfHEn">Opera Mediaworks</a>, in San Mateo.</p>
+              <p>SM Hacks is a 200-person hackathon that will gather the innovators of tomorrow into an amazing experience.</p>
             </div>
             <div class="col-sm-4">
               <h3>What is a hackathon?</h3>
@@ -84,7 +86,7 @@
           <div data-when="enter" data-from='0.5' data-to='0' data-opacity='0' data-translatey='1000' class="row scrollme animateme">
             <div class="col-sm-4">
               <h3>Do I have to be in high school?</h3>
-              <p>Yes, only current high school students will be able to attend. Unfortunately, we are not accepting middle school students. However, college students are welcome to help out. To mentor or lead a workshop, click <a target="_blank" href="https://smhacks.typeform.com/to/avpXre">here</a> or email <a target="_blank" href="mailto:volunteer@smhacks.com">volunteer@smhacks.com</a> for more details.</p>
+              <p>Yes, only current high school students will be able to attend. Unfortunately, we are not accepting middle school students. However, college students are welcome to help out. To mentor or lead a workshop, email <a target="_blank" href="mailto:volunteer@smhacks.com">volunteer@smhacks.com</a> for more details.</p>
             </div>
             <div class="col-sm-4">
               <h3>What if I don't have a team or an idea?</h3>
@@ -106,13 +108,13 @@
             </div>
             <div class="col-sm-4">
               <h3>How can I apply?</h3>
-              <p>Just fill out <a target="_blank" href="https://smhacks.typeform.com/to/XokTDO">this form</a>! Applications close Friday, September 9 but will be processed on a rolling basis. Make sure to <a href="#update">subscribe</a>, follow us on <a target="blank" href="https://twitter.com/sanmateohacks">Twitter</a>, and like us on <a target="blank" href="https://facebook.com/sanmateohacks">Facebook</a> for the latest updates!</p>
+              <p>SM Hacks has been postponed until further notice. Be sure to <a href="#update">subscribe</a> for the latest updates!</p>
             </div>
           </div>
           <div data-when="enter" data-from='0.5' data-to='0' data-opacity='0' data-translatey='1000' class="row scrollme animateme">
             <div class="col-sm-4">
               <h3>What is the schedule like?</h3>
-              <p>It will be from Saturday, September 17 through Sunday, September 18, 2016. Be sure to check back for a more specific schedule, but don't worry! There will be plenty of fun activities that will keep you entertained.</p>
+              <p>SM Hacks has been postponed until further notice and a more specific schedule will be posted later! There will be plenty of fun activities that will keep you entertained.</p>
             </div>
             <div class="col-sm-4">
               <h3>Will there be travel reimbursements?</h3>
@@ -125,40 +127,35 @@
           </div>
           <hr>
         </div>
-        <div id="schedule" data-when="enter" data-from='0.5' data-to='0' data-translatex='-1000' class="scrollme animateme">
-          <h2 class="text-center">Schedule</h2>
-          <p class="lead">Hacking is from noon to noon.</p>
-          <div data-when="enter" data-from='0.5' data-to='0' data-translatey='1000' class="row scrollme animateme">
-            <div class="col-sm-1 hidden-xs"></div>
-            <div data-when="enter" data-from='0.5' data-to='0' data-opacity='0' data-translatex='-500' class="col-sm-5 text-center scrollme animateme">
-              <h3>Saturday, Sept. 17</h3>
-              <ul class="list-unstyled">
-                <li><b>10am</b> - Registration</li>
-                <li><b>11am</b> - Opening Ceremony</li>
-                <li><b>Noon</b> - Hacking Starts</li>
-                <li><b>Noon</b> - Team Mixer</li>
-                <li><b>Noon</b> - Lunch</li>
-                <li><b>2pm</b> - Intro to Git Workshop</li>
-                <li><b>4pm</b> - Intro to UX Design Workshop</li>
-                <li><b>6:30pm</b> - Dinner</li>
-              </ul>
-            </div>
-            <div data-when="enter" data-from='0.5' data-to='0' data-opacity='0' data-translatex='500' class="col-sm-5 text-center scrollme animateme">
-              <h3>Sunday, Sept. 18</h3>
-              <ul class="list-unstyled">
-                <li><b>12am</b> - Midnight Snack</li>
-                <li><b>8am</b> - Breakfast</li>
-                <li><b>11am</b> - Lunch</li>
-                <li><b>11am</b> - Project Submissions Open</li>
-                <li><b>Noon</b> - Hacking Ends</li>
-                <li><b>Noon</b> - Project Submissions Close</li>
-                <li><b>Noon</b> - Judging and Demos</li>
-                <li><b>2pm </b>- Closing Ceremony</li>
-              </ul>
-            </div>
-          </div>
-          <hr>
-        </div>
+        <!--#schedule.scrollme.animateme(data-when='enter' data-from=.5 data-to=0 data-translatex=-1000)
+        h2.text-center Schedule
+        p.lead Hacking is from noon to noon.
+        .row.scrollme.animateme(data-when='enter' data-from=.5 data-to=0 data-translatey=1000)
+          .col-sm-1.hidden-xs
+          .col-sm-5.text-center.scrollme.animateme(data-when='enter' data-from=.5 data-to=0 data-opacity=0 data-translatex=-500)
+            h3 Saturday, Sept. 17
+            ul.list-unstyled
+              li <b>10am</b> - Registration
+              li <b>11am</b> - Opening Ceremony
+              li <b>Noon</b> - Hacking Starts
+              li <b>Noon</b> - Team Mixer
+              li <b>Noon</b> - Lunch
+              li <b>2pm</b> - Intro to Git Workshop
+              li <b>4pm</b> - Intro to UX Design Workshop
+              li <b>6:30pm</b> - Dinner
+          .col-sm-5.text-center.scrollme.animateme(data-when='enter' data-from=.5 data-to=0 data-opacity=0 data-translatex=500)
+            h3 Sunday, Sept. 18
+            ul.list-unstyled
+              li <b>12am</b> - Midnight Snack
+              li <b>8am</b> - Breakfast
+              li <b>11am</b> - Lunch
+              li <b>11am</b> - Project Submissions Open
+              li <b>Noon</b> - Hacking Ends
+              li <b>Noon</b> - Project Submissions Close
+              li <b>Noon</b> - Judging and Demos
+              li <b>2pm </b>- Closing Ceremony
+        hr
+        -->
         <div id="sponsors" data-when="enter" data-from='0.5' data-to='0' data-opacity='0' data-translatex='1000' class="scrollme animateme">
           <h2 class="text-center">Sponsors</h2>
           <div class="row">
@@ -319,21 +316,20 @@
         </footer>
       </div>
     </div>
-    <div id="m" tabindex="-1" role="dialog" class="modal fade">
-      <div class="modal-dialog">
-        <div class="modal-content">
-          <div class="modal-header">
-            <button data-dismiss="modal" class="close">&times;</button>
-            <h1 class="modal-title">Sign Up</h1>
-          </div>
-          <div class="modal-body text-center">
-            <h3><a href="https://smhacks.typeform.com/to/XokTDO" target="_blank" class="btn btn-default">Hacker</a> or <a href="https://smhacks.typeform.com/to/avpXre" target="_blank" class="btn btn-default">Mentor</a>?</h3>
-          </div>
-          <div class="modal-footer">
-            <button data-dismiss="modal" class="btn btn-primary">Cancel</button>
-          </div>
-        </div>
-      </div>
-    </div>
+    <!--.modal.fade#m(tabindex="-1" role="dialog")
+    .modal-dialog
+      .modal-content
+        .modal-header
+          button.close(data-dismiss='modal') &times;
+          h1.modal-title Sign Up
+        .modal-body.text-center
+          h3
+            a.btn.btn-default(href='https://smhacks.typeform.com/to/XokTDO' target='_blank') Hacker
+            |  or
+            a.btn.btn-default(href='https://smhacks.typeform.com/to/avpXre' target='_blank') Mentor
+            |?
+        .modal-footer
+          button.btn.btn-primary(data-dismiss='modal') Cancel
+    -->
   </body>
 </html>
