--- a/index.html
+++ b/index.html
@@ -2,10 +2,8 @@
 <html>
   <head>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/headjs/1.0.3/head.load.min.js"></script>
-    <link rel="shortcut icon" href="logo_2.0_solo.png" type="image/png">
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
-    <link rel="apple-touch-icon" href="logo_2.0_solo.png">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -17,7 +15,6 @@
     <meta property="og:site_name" content="SM Hacks">
     <meta property="og:title" content="SM Hacks">
     <meta property="og:description" content="San Mateo's first high school hackathon.">
-    <meta property="og:image" content="logo_2.0_solo.png">
     <meta property="og:url" content="http://smhacks.com">
     <title>SM Hacks</title>
     <link rel="stylesheet prefetch" href="bootstrap.css">
@@ -31,9 +28,6 @@
     <script>head.load('https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js','https://code.jquery.com/color/jquery.color.plus-names-2.1.2.min.js','https://rawgit.com/camwiegert/baffle/master/dist/baffle.min.js','https://rawgit.com/nckprsn/scrollme/master/jquery.scrollme.min.js','https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js','main.js')</script>
   </head>
   <body>
-    <div class="loading"><img id="logo" src="logo_2.0_solo.svg">
-      <div class="circle"></div>
-    </div>
     <div class="bg change"></div>
     <div class="cover">
       <div class="container text-center">
@@ -159,7 +153,7 @@
           <h2 class="text-center">Sponsors</h2>
           <div class="row">
             <div class="col-sm-12 text-center">
-              <p class="lead">We will be announcing our full list of awesome sponsors soon! Want to get involved?</p><a data-when="enter" data-from='0.5' data-to='0' data-opacity='0' data-translatey='200' href="sponsor.pdf" target="_blank" class="btn btn-primary btn-lg animateme">Get the Sponsorship Packet!</a>
+              <p class="lead">We will be announcing our full list of awesome sponsors soon! Want to get involved?</p><a data-when="enter" data-from='0.5' data-to='0' data-opacity='0' data-translatey='200' href="mailto:sponsors@smhacks.com" target="_blank" class="btn btn-primary btn-lg animateme">Send us an email!</a>
             </div>
           </div><br><br><br>
           <div data-when="enter" data-from='0.5' data-to='0' data-opacity='0' data-translatey='1000' class="row text-center scrollme animateme">
@@ -301,7 +295,6 @@
         <footer data-when="enter" data-from='1' data-to='0' data-translatex='1000' class="footer scrollme animateme">
           <div class="container">
             <div class="row">
-              <div class="col-sm-1 col-xs-6 text-center"><img src="logo_2.0_solo.svg"></div>
               <div class="col-sm-7 hidden-xs">
                 <p class="text-muted">Made with <i class='fa fa-heart' style='color:#ff7242'></i> by SM Hacks.</p>
               </div>
