--- a/index.html
+++ b/index.html
@@ -157,7 +157,8 @@
             </div>
           </div><br><br><br>
           <div data-when="enter" data-from='0.5' data-to='0' data-opacity='0' data-translatey='1000' class="row text-center scrollme animateme">
-            <div class="col-sm-12"><a href="http://sie.com/en/index.html" target="_blank"><img src="sony.png" id="sony"></a></div>
+            <div class="col-sm-6"><a href="http://sie.com/en/index.html" target="_blank"><img src="sony.png" id="sony"></a></div>
+            <div class="col-sm-6"><a href="#/" target="_blank"><img src="google.png" id="google"></a></div>
           </div>
           <div data-when="enter" data-from='0.5' data-to='0' data-opacity='0' data-translatey='1000' class="row text-center text-center scrollme animateme">
             <div class="col-sm-6"><a href="http://smule.com/" target="_blank"><img src="smule.png" id="smule"></a></div>
