--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
             <h1 class="modal-title">Sign Up</h1>
           </div>
           <div class="modal-body text-center">
-            <h3><a href="https://smhacks.typeform.com/to/SZPVdt" target="_blank" class="btn btn-default">Hacker</a> or <a disabled class="btn btn-default">Mentor (Coming soon!)</a>?</h3>
+            <h3><a href="https://smhacks.typeform.com/to/SZPVdt" target="_blank" class="btn btn-default">Hacker</a> or <a href="https://smhacks.typeform.com/to/XCtApy" target="_blank" class="btn btn-default">Mentor</a>?</h3>
           </div>
           <div class="modal-footer">
             <button data-dismiss="modal" class="btn btn-primary">Cancel</button>
