--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!--output: index.html--><!DOCTYPE html>
 <html>
   <head>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/headjs/1.0.3/head.load.min.js"></script>
@@ -128,8 +128,8 @@
             <h3>Saturday, Jan. 14</h3>
             <ul class="list-unstyled">
               <li><b>10:00 AM</b> - Mentor/Sponsors Check In</li>
-              <li><b>11:00 AM</b> - Hacker Check In</li>
-              <li><b>12:00 PM</b> - Opening Ceremony </li>
+              <li><b>10:30 AM</b> - Hacker Check In</li>
+              <li><b>11:30 AM</b> - Opening Ceremony </li>
               <li><b>12:30 PM</b> - Hacking Starts</li>
               <li><b>12:30 PM</b> - Team-mixer</li>
               <li><b>12:30 PM</b> - Lunch </li>
@@ -160,29 +160,43 @@
           </div>
         </div>
         <div class="row text-center">
-          <div class="col-sm-6"><a href="http://sie.com/en" target="_blank"><img src="sony.png" id="sony"></a></div>
-          <div class="col-sm-6"><a href="https://google.com" target="_blank"><img src="google.png" id="google"></a></div>
+          <div class="col-sm-6"><a href="https://www.informatica.com/" target="_blank"><img src="informatica.png" id="informatica" class="sp"></a></div>
+          <div class="col-sm-6"><a href="https://google.com" target="_blank"><img src="google.png" id="google" class="sp"></a></div>
         </div>
         <div class="row text-center text-center">
-          <div class="col-sm-6"><a href="http://smule.com/" target="_blank"><img src="smule.png" id="smule"></a></div>
-          <div class="col-sm-6"><a href="https://ibm.com/" target="_blank"><img src="ibm.png" id="ibm"></a><br><small style="font-size:8px">IBM and the IBM logo are trademarks of International Business Machines Corp., registered in many jurisdictions worldwide.</small></div>
+          <div class="col-sm-6"><a href="http://sie.com/en" target="_blank"><img src="playstation.png" id="sony" class="sp"></a></div>
+          <div class="col-sm-6"><a href="http://smule.com/" target="_blank"><img src="smule.png" id="smule" class="sp"></a></div>
         </div>
         <div class="row text-center text-center">
-          <div class="col-sm-4"><a href="http://justinmind.com" target="_blank"><img src="justinmind.png" id="justinmind"></a></div>
-          <div class="col-sm-4"><a href="http://mitlaunch.com/" target="_blank"><img src="mit-launch.png" id="mit-launch"></a></div>
-          <div class="col-sm-4"><a href="http://mlworks.com" target="_blank"><img src="mlw.png" id="mlw"></a></div>
-        </div><br><br>
+          <div class="col-sm-6"><a href="http://www.brandmakers.com/" target="_blank"><img src="brandmakers.png" id="brandmakers" class="sp"></a></div>
+          <div class="col-sm-6"><a href="https://ibm.com/" target="_blank"><img src="ibm.png" id="ibm" class="sp"></a><br><small style="font-size:8px">IBM and the IBM logo are trademarks of International Business Machines Corp., registered in many jurisdictions worldwide.</small></div>
+        </div>
         <div class="row text-center text-center">
-          <div class="col-sm-4"><a href="http://balsamiq.com/" target="_blank"><img src="balsamiq.png" id="balsamiq"></a></div>
-          <div class="col-sm-4"><a href="http://wolfram.com/" target="_blank"><img src="wolfram.png" id="wolfram"></a></div>
-          <div class="col-sm-4"><a href="http://vilynx.com/" target="_blank"><img src="vilynx.png" id="vilynx"></a></div>
+          <div class="col-sm-4"><a href="http://justinmind.com" target="_blank"><img src="justinmind.png" id="justinmind" class="sp"></a></div>
+          <div class="col-sm-4"><a href="http://mitlaunch.com/" target="_blank"><img src="mit-launch.png" id="mit-launch" class="sp"></a></div>
+          <div class="col-sm-4"><a href="http://mlworks.com" target="_blank"><img src="mlw.png" id="mlw" class="sp"></a></div>
+        </div><br><br><br><br>
+        <div class="row text-center text-center">
+          <div class="col-sm-4"><a href="http://balsamiq.com/" target="_blank"><img src="balsamiq.png" id="balsamiq" class="sp"></a></div>
+          <div class="col-sm-4"><a href="http://wolfram.com/" target="_blank"><img src="wolfram.png" id="wolfram" class="sp"></a></div>
+          <div class="col-sm-4"><a href="http://vilynx.com/" target="_blank"><img src="vilynx.png" id="vilynx" class="sp"></a></div>
+        </div><br><br><br>
+        <div class="row text-center text-center">
+          <div class="col-sm-4"><a href="https://www.makeschool.com/" target="_blank"><img src="makeschool.png" id="makeschool" class="sp"></a></div>
+          <div class="col-sm-4"><a href="https://www.marketo.com/" target="_blank"><img src="marketo.png" id="marketo" class="sp"></a></div>
+          <div class="col-sm-4"><a href="http://www.dual-aperture.com/" target="_blank"><img src="dualaperture.png" id="dualaperture" class="sp"></a></div>
+        </div><br><br><br>
+        <div class="row text-center">
+          <div class="col-md-3 col-sm-6"><a href="https://github.com/" target="_blank"><img src="github.png" id="github" class="sp"></a></div>
+          <div class="col-md-3 col-sm-6"><a href="http://lattice-engines.com/" target="_blank"><img src="lattice.png" id="lattice" class="sp"></a></div>
+          <div class="col-md-3 col-sm-6"><a href="http://a16z.com/" target="_blank"><img src="a16z.png" id="a16z" class="sp"></a></div>
+          <div class="col-md-3 col-sm-6"><a href="http://get.tech/" target="_blank"><img src="tech.png" id="tech" class="sp"></a></div>
         </div><br><br><br>
         <h2 class="text-center">Partners</h2>
         <div class="row text-center">
-          <div class="col-md-3 col-sm-6"><a href="https://hackclub.com" target="_blank"><img src="hackclub.png" id="hackclub"></a></div>
-          <div class="col-md-3 col-sm-6"><a href="http://streameducation.org" target="_blank"><img src="stream.png" id="stream"></a></div>
-          <div class="col-md-3 col-sm-6"><a href="https://hackerearth.com/" target="_blank"><img src="hackerearth.png" id="hackerearth"></a></div>
-          <div class="col-md-3 col-sm-6"><a href="http://www.hacker.fund/" target="_blank"><img src="hackerfund.png" id="hackerfund"></a></div>
+          <div class="col-sm-4 col-sm-4"><a href="https://hackclub.com" target="_blank"><img src="hackclub.png" id="hackclub" class="sp"></a></div>
+          <div class="col-sm-4"><a href="http://streameducation.org" target="_blank"><img src="stream.png" id="stream" class="sp"></a></div>
+          <div class="col-sm-4"><a href="http://www.hacker.fund/" target="_blank"><img src="hackerfund.png" id="hackerfund" class="sp"></a></div>
         </div>
       </div>
     </div>
@@ -194,7 +208,7 @@
             <div class="member"><img src="samuel.jpg" class="img-responsive img-circle">
               <div class="name">Samuel Escapa</div>
               <div class="role">Sponsorship Director</div>
-              <div class="social"><a href="http://saescapa.me" target="_blank"><i class="fa fa-globe"></i></a><a href="http://twitter.saescapa.me" target="_blank"><i class="fa fa-twitter"></i></a><a href="http://linkedin.saescapa.me" target="_blank"><i class="fa fa-linkedin"></i></a><a href="http://github.saescapa.me" target="_blank"><i class="fa fa-github"></i></a></div>
+              <div class="social"><a href="http://saescapa.tech" target="_blank"><i class="fa fa-globe"></i></a><a href="http://twitter.saescapa.tech" target="_blank"><i class="fa fa-twitter"></i></a><a href="http://linkedin.saescapa.tech" target="_blank"><i class="fa fa-linkedin"></i></a><a href="http://github.saescapa.tech" target="_blank"><i class="fa fa-github"></i></a></div>
             </div>
           </div>
           <div class="col-sm-3">
