--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!--output: index.html--><!DOCTYPE html>
+<!DOCTYPE html>
 <html>
   <head>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/headjs/1.0.3/head.load.min.js"></script>
@@ -166,11 +166,15 @@
         <div class="row text-center text-center">
           <div class="col-sm-6"><a href="http://sie.com/en" target="_blank"><img src="playstation.png" id="sony" class="sp"></a></div>
           <div class="col-sm-6"><a href="http://smule.com/" target="_blank"><img src="smule.png" id="smule" class="sp"></a></div>
-        </div>
+        </div><br><br>
         <div class="row text-center text-center">
           <div class="col-sm-6"><a href="http://www.brandmakers.com/" target="_blank"><img src="brandmakers.png" id="brandmakers" class="sp"></a></div>
           <div class="col-sm-6"><a href="https://ibm.com/" target="_blank"><img src="ibm.png" id="ibm" class="sp"></a><br><small style="font-size:8px">IBM and the IBM logo are trademarks of International Business Machines Corp., registered in many jurisdictions worldwide.</small></div>
-        </div>
+        </div><br><br>
+        <div class="row text-center text-center">
+          <div class="col-sm-6"><a href="https://www.pubnub.com/" target="_blank"><img src="pubnub.png" id="pubnub" class="sp"></a></div>
+          <div class="col-sm-6"><a href="https://www.twilio.com/" target="_blank"><img src="twilio.png" id="twilio" class="sp"></a></div>
+        </div><br><br>
         <div class="row text-center text-center">
           <div class="col-sm-4"><a href="http://justinmind.com" target="_blank"><img src="justinmind.png" id="justinmind" class="sp"></a></div>
           <div class="col-sm-4"><a href="http://mitlaunch.com/" target="_blank"><img src="mit-launch.png" id="mit-launch" class="sp"></a></div>
