--- a/index.html
+++ b/index.html
@@ -187,8 +187,8 @@
         </div><br><br><br>
         <div class="row text-center text-center">
           <div class="col-sm-4"><a href="https://www.makeschool.com/" target="_blank"><img src="makeschool.png" id="makeschool" class="sp"></a></div>
+          <div class="col-sm-4"><a href="http://www.dual-aperture.com/" target="_blank"><img src="scenera.png" id="scenera" class="sp"></a></div>
           <div class="col-sm-4"><a href="https://www.marketo.com/" target="_blank"><img src="marketo.png" id="marketo" class="sp"></a></div>
-          <div class="col-sm-4"><a href="http://www.dual-aperture.com/" target="_blank"><img src="dualaperture.png" id="dualaperture" class="sp"></a></div>
         </div><br><br><br>
         <div class="row text-center">
           <div class="col-md-3 col-sm-6"><a href="https://github.com/" target="_blank"><img src="github.png" id="github" class="sp"></a></div>
