--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
     <meta property="og:site_name" content="SM Hacks">
     <meta property="og:title" content="SM Hacks">
     <meta property="og:description" content="San Mateo's first high school hackathon.">
-    <meta property="og:image" content="cover.png">
+    <meta property="og:image" content="http://www.smhacks.com/social-media-logo.png">
+    <meta property="twitter:image" content="http://www.smhacks.com/social-media-logo.png">
     <meta property="og:url" content="http://smhacks.com">
     <title>SM Hacks</title>
     <link rel="stylesheet prefetch" href="bootstrap.css">
