--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!--output: index.html--><!DOCTYPE html>
+<!DOCTYPE html>
 <html>
   <head>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/headjs/1.0.3/head.load.min.js"></script>
@@ -18,8 +18,8 @@
     <meta property="og:title" content="SM Hacks">
     <meta property="og:description" content="San Mateo's first high school hackathon.">
     <meta property="og:image" content="http://www.smhacks.com/social-media-logo.png">
+    <meta property="og:url" content="http://www.smhacks.com">
     <meta property="twitter:image" content="http://www.smhacks.com/social-media-logo.png">
-    <meta property="og:url" content="http://smhacks.com">
     <title>SM Hacks</title>
     <link rel="stylesheet prefetch" href="bootstrap.css">
     <link rel="stylesheet prefetch" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
@@ -144,6 +144,7 @@
             <ul class="list-unstyled">
               <li><b>12:00 AM</b> - Midnight Snack</li>
               <li><b>8:00 AM</b> - Breakfast </li>
+              <li><b>9:00 AM</b> — Realtime Data Visualization Workshop</li>
               <li><b>11AM to 12 PM</b> - Submissions</li>
               <li><b>12:00 PM</b> - Hacking Ends</li>
               <li><b>12:00 PM</b> - Lunch </li>
@@ -164,7 +165,7 @@
         </div>
         <div class="row text-center">
           <div class="col-sm-6"><a href="https://www.informatica.com/" target="_blank"><img src="informatica.png" id="informatica" class="sp"></a></div>
-          <div class="col-sm-6"><a href="https://google.com" target="_blank"><img src="google.png" id="google" class="sp"></a></div>
+          <div class="col-sm-6"><a href="https://developers.google.com/" target="_blank"><img src="google.png" id="google" class="sp"></a></div>
         </div>
         <div class="row text-center text-center">
           <div class="col-sm-6"><a href="http://sie.com/en" target="_blank"><img src="playstation.png" id="sony" class="sp"></a></div>
