--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!--output: index.html--><!DOCTYPE html>
 <html>
   <head>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/headjs/1.0.3/head.load.min.js"></script>
@@ -38,7 +38,8 @@
           <div class="col-sm-12"><img src="logo.png" class="logo">
             <div class="rest">
               <h3>San Mateo's first <b>high school</b> hackathon!</h3>
-              <p class="lead">January 14-15, 2017 @ <a href='https://www.google.com/maps/place/Informatica+Corporation/@37.5111227,-122.2051784,15z/data=!4m5!3m4!1s0x0:0xc479e59839708591!8m2!3d37.5111227!4d-122.2051784' target='_blank'>Informatica</a></p><a data-toggle="modal" data-target="#m" class="btn btn-default btn-lg">Sign up now!</a>
+              <p class="lead">January 14-15, 2017 @ <a href='https://www.google.com/maps/place/Informatica+Corporation/@37.5111227,-122.2051784,15z/data=!4m5!3m4!1s0x0:0xc479e59839708591!8m2!3d37.5111227!4d-122.2051784' target='_blank'>Informatica</a></p><a data-toggle="modal" data-target="#m" class="btn btn-default btn-lg">Sign up now!</a><br><br>
+              <p>Applications close January 12, 2017</p>
             </div>
           </div>
         </div>
@@ -99,7 +100,7 @@
           </div>
           <div class="col-sm-4">
             <h3>How can I apply?</h3>
-            <p>For attendees, just fill out <a href="https://smhacks.typeform.com/to/SZPVdt">this form</a>. Mentors, fill out <a href="https://smhacks.typeform.com/to/XCtApy">this form</a> for the latest updates!</p>
+            <p>For attendees, just fill out <a href="https://smhacks.typeform.com/to/SZPVdt">this form</a>. Applications close Jan. 12, 2017. Mentors, fill out <a href="https://smhacks.typeform.com/to/XCtApy">this form</a> for the latest updates!</p>
           </div>
         </div>
         <div class="row">
