--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!--output: index.html--><!DOCTYPE html>
+<!DOCTYPE html>
 <html>
   <head>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/headjs/1.0.3/head.load.min.js"></script>
@@ -25,10 +25,7 @@
     <link rel="stylesheet prefetch" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
     <link rel="stylesheet prefetch" href="https://fonts.googleapis.com/css?family=Quicksand">
     <link rel="stylesheet prefetch" href="https://fonts.googleapis.com/css?family=Cabin:400,700">
-    <link rel="stylesheet prefetch" href="style.css">
-    <noscript>
-      <link rel="stylesheet prefetch" href="noscript.css">
-    </noscript>
+    <link rel="stylesheet prefetch" href="style.min.css">
     <script>head.load('https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js','https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js','main.js')</script>
   </head>
   <body>
@@ -92,7 +89,7 @@
         <div class="row">
           <div class="col-sm-4">
             <h3>What should I bring?</h3>
-            <p>Attendees should bring a valid student ID or some other form of identification, as well as a signed and completed waiver. Bring laptops and chargers, along with any other technology that you may want to use! We will have designated sleeping spots so feel free to bring a sleeping bag and pillow. Also it is highly suggested that you bring toiletries so you can feel refreshed and beautiful!</p>
+            <p>Attendees should bring a valid student ID or some other form of identification. ALL attendees must have completed a signed <a href="https://www.hellosign.com/s/bf714f6b">waiver</a> online. Bring laptops and chargers, along with any other technology that you may want to use! We will have designated sleeping spots so feel free to bring a sleeping bag and pillow. Also it is highly suggested that you bring toiletries so you can feel refreshed and beautiful!</p>
           </div>
           <div class="col-sm-4">
             <h3>How much does it cost to attend?</h3>
@@ -135,7 +132,7 @@
               <li><b>12:00 PM</b> - Team-mixer</li>
               <li><b>12:00 PM</b> - Lunch</li>
               <li><b>1:00 PM</b> - Intro to iOS Workshop</li>
-              <li><b>2:30 PM</b> - Intermediate iOS Workshop</li>
+              <li><b>2:00 PM</b> - Intermediate iOS Workshop</li>
               <li><b>3:00 PM</b> - Intro to Git Workshop</li>
               <li><b>6:30 PM</b> - Dinner</li>
             </ul>
